# VPIPO

./: README.md
tasks/concurrency/condvar/condvar/: condvar.hpp
tasks/concurrency/condvar/semaphore/: semaphore.hpp
tasks/concurrency/future/: CMakeLists.txt  future.hpp  promise.hpp
tasks/concurrency/future/tests/: unit.cpp
tasks/concurrency/mutex/: CMakeLists.txt  mutex.hpp
tasks/concurrency/mutex/tests/: unit.cpp
tasks/memory/FIleMapper/: FileMapperSolution.md  README.md  supaBigSort  supaBigSort.cpp  testing.sh
